2009-01-03  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags-taglib.cc:
	ID3 metatags: added support for total number of tracks (Audio.AlbumTrackCount)

2009-01-02  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	Fixed problem #556664 (bookmarks can not be saved for mounted devices)

2008-12-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-user-actions.cc
	Updated copyright info

	 * src/gnome-cmd-data.cc:
	i18n: translate default profile name (CamelCase)

2008-12-16  Piotr Eljasiak  <epiotr@use.pl>

	 * src/Makefile.am:
	 * src/gnome-cmd-advrename-dialog.cc:
	 * src/gnome-cmd-advrename-dialog.h:
	 * src/gnome-cmd-data.cc:
	 * src/gnome-cmd-data.h:
	 * src/gnome-cmd-regex.h:
	 * src/gnome-cmd-xml-config.cc
	 * src/dialogs/gnome-cmd-advrename-regex-dialog.cc:
	 * src/dialogs/gnome-cmd-advrename-regex-dialog.h:
	regex: move common code to gnome-cmd-data.h file

2008-12-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-advrename-dialog.cc:
	advrename: mark rename failure as red italics

	* src/Makefile.am:
	Do not set default profiles for first-time users if there is no support for GRegex

2008-12-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-menu-button.cc:
	* src/gnome-cmd-menu-button.h:
	move code for menu buttons to gnome-cmd-menu-button.{cc,h} files

	* dialogs/gnome-cmd-advrename-profiles-dialog:
	advrename profiles: added menu button for profile import

	* src/gnome-cmd-advrename-dialog.cc:
	* src/gnome-cmd-data.h:
	advrename: fix for profile saving

2008-12-09  Piotr Eljasiak  <epiotr@use.pl>

	* src/dialogs/gnome-cmd-advrename-profiles-dialog.cc:
	advrename: replaced 'Add' button with 'Duplicate' one

2008-12-08  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	* src/gnome-cmd-con-ftp.cc:
	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-dir.cc:
	* src/intviewer/image-render.cc:
	* src/intviewer/text-render.cc: